--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
-Flask_SQLAlchemy==2.5.1
+appdirs==1.4.4
+black==21.7b0
+certifi==2021.5.30
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+docopt==0.6.2
 Flask==2.0.1
-requests==2.26.0
-urllib3==1.26.6
-SQLAlchemy==1.4.22
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.1
 gunicorn==20.1.0
+idna==3.2
+isort==5.9.3
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+pipreqs==0.4.10
+regex==2021.8.3
+requests==2.26.0
+SQLAlchemy==1.4.22
+tomli==1.2.1
+urllib3==1.26.6
+Werkzeug==2.0.1
+yarg==0.1.9
